--- a/index.htm
+++ b/index.htm
@@ -78,23 +78,24 @@
                 </div>
                 <div class="form">
                     <div>
-                        <label for="sign-in-email">E-Mail</label>
+                        <label for="sign-up-email">E-Mail</label>
                         <input type="email" id="sign-up-email" class="form-control">
+                        <i class="i-email" for="sign-in-email"></i>
                         <span id="error-sign-up-email">email not found</span>
                     </div>
                     <div>
-                        <label for="sign-in-password">Password</label>
+                        <label for="sign-up-password">Password</label>
                         <input type="password" id="sign-up-password" class="form-control">
-                        <button>Forget your password?</button>
+                        <i class="i-eye-close" data-type="password"></i>
                     </div>
                 </div>
                 <div class="button">
-                    <button>SIGN IN</button>
+                    <button id="btn-sign-up">SIGN UP</button>
                     <a href="javascript:void(0)" class="btn-google">
                         <i class="i-google"></i>
                     </a>
                 </div>
-                <div class="comment">By clicking the Sign In Button you therefore agree to the Privacy Policy For more information, read about our privacy hear.</div>
+                <div class="comment">Registration in the MonoFreelancer website means that you have agreed to the <a href="#">rules</a> of the site.</div>
             </div>
         </div>
     </div>
